# strategy

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1f1593afc15a_timeframe_is_string_field.py  20256b7cf1a0_initial_revision.py  79973f2443b4_timeframe_is_string_field.py  a87246901536_timeframe_is_string_field.py
strategy/: strategy.py
strategy/db/: __init__.py  base.py  candle.py
strategy/exchange/: base_exchange.py
strategy/indicators/: __init__.py  adx.py
strategy/modes/: backtest_mode.py
strategy/modes/import_candles_mode/: __init__.py
strategy/modes/import_candles_mode/drivers/: alpaca.py  base_candles_exchange.py
strategy/store/: candles.py  store.py
tests/: test_indicators.py  test_strategy.py
tests/data/: test_candle_indicators.py
